fixed spacing issue on logo in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,25 +20,25 @@ a{
 }
 
 h1{
-    font-size: 2em;
+    font-size: 2px;
 }
 
 h2{
-    font-size: 1em;
+    font-size: 1px;
 }
 
 /* Layout */
 header{
     font-family: Georgia, 'Times New Roman', Times, serif;
     width: 100%;
-    height: auto;
+    height: 120px;
     border-bottom: 2px solid #cccccc;
     background-color: #ffffff;
 }
 
 header .box1{
     width: 960px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 .name, .nav{
